Modernize checkerframework/pom.xml