@@ -17,18 +17,15 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-		<!-- These properties will be set by the Maven Dependency plugin -->
-		<!-- Change to jdk7 if using Java 7 -->
-		<annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
-		<!-- Uncomment to use the type annotations compiler. -->
-		<!-- <typeAnnotationsJavac>${org.checkerframework:compiler:jar}</typeAnnotationsJavac> -->
+		<checkerframework.version>3.49.5</checkerframework.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- annotations from the Checker Framework: nullness, interning, locking, 
@@ -36,21 +33,7 @@
 		<dependency>
 			<groupId>org.checkerframework</groupId>
 			<artifactId>checker-qual</artifactId>
-			<version>1.9.13</version>
-		</dependency>
-		<dependency>
-			<groupId>org.checkerframework</groupId>
-			<artifactId>checker</artifactId>
-			<version>1.9.13</version>
-		</dependency>
-		<!-- The type annotations compiler - uncomment if desired -->
-		<!-- <dependency> <groupId>org.checkerframework</groupId> <artifactId>compiler</artifactId> 
-			<version>1.9.13</version> </dependency> -->
-		<!-- The annotated JDK to use (change to jdk7 if using Java 7) -->
-		<dependency>
-			<groupId>org.checkerframework</groupId>
-			<artifactId>jdk8</artifactId>
-			<version>1.9.13</version>
+			<version>${checkerframework.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -59,19 +42,29 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<fork>true</fork>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.checkerframework</groupId>
+							<artifactId>checker</artifactId>
+							<version>${checkerframework.version}</version>
+						</path>
+					</annotationProcessorPaths>
 					<annotationProcessors>
-						<!-- Add all the checkers you want to enable here -->
 						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+						<annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
 					</annotationProcessors>
 					<compilerArgs>
-						<!-- location of the annotated JDK, which comes from a Maven dependency -->
-						<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
-						<!-- Uncomment the following line to use the type annotations compiler. -->
-						<!-- <arg>-J-Xbootclasspath/p:${typeAnnotationsJavac}</arg> -->
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
